fix left-align

--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ h3 {
     margin-top: 2em;
 	margin-bottom: 30px;
 	padding-bottom: 2em;
+	text-align: center;
 }
 
 .btn-primary:hover {
@@ -243,6 +244,7 @@ h3 {
 	font-weight: 700;
 	margin-top: 30px;
 	margin-bottom: 5px;
+	margin-left: -4em;
 }
 
 .footer-blue {
@@ -289,7 +291,7 @@ h3 {
 	margin-bottom: 20px;
 }
 
-.ipad:hover, .iphone:hover {
+.tablet:hover, .iphone:hover {
     cursor: url('./img/cross.png'), url('./img/cross.png') 5 5, progress;
 }
 
@@ -354,7 +356,7 @@ button:hover {
 
 .skate img {
 	height: 70%;
-	width: 80%;
+	width: 90%;
 }
 
 .container-main {
@@ -366,9 +368,22 @@ button:hover {
 }
 
 .tablet > div:nth-child(1) > div:nth-child(1) > div:nth-child(3) {
-	padding: 2vh;
+	text-align: left;
+	padding-top: 3vh;
+	padding-bottom: 3vh;
 }
 
-.tablet {
+.lead, .col-md-6 {
+	text-align: left;
+	padding: 0;
+}
+
+div.container:nth-child(3) > div:nth-child(2) > div:nth-child(3) {
+	text-align: left;
+	padding-top: 3vh;
+	padding-bottom: 3vh;
+}
+
+.dog {
 	text-align: left;
 }
